@@ -1,0 +1,8 @@
+[1][2]
+background rgb 1 0 0
+1:color push rgb 0 0 1
+[3][4]
+background gray 1
+
+Maximal depth of color stack:2
+Some corrections are necessary!
