@@ -1,3 +1,12 @@
+2018-10-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* dvispc.test: Add tests for consistency between EXE2MODIFY
+	and EXE2CHECK.
+	* tests/oldindep.dry, tests/tpicpn.dry, tests/tpicsh.dry,
+	tests/reverse.dry, tests/first.dry, tests/firstpn.dry:
+	New tests.
+	* Makefile.am: Adjusted.
+
 2018-10-14  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Fix a bug that modification of non-stack
